--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,10 @@ embed {
     height: 800px;
     width: 300px;
 }
+iframe {
+    width: 900px;
+    height: 596px;
+    border: 0px;
+    border-radius: 0px;
+    margin-top: 20px;
+  }
