--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,15 @@ iframe {
     border: 0px;
     border-radius: 0px;
     margin-top: 20px;
-  }
+}
+.border {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: #000;
+    width: 50px;
+    height: 600px;
+    border: none;
+    padding: 50px;
+    border-radius: 0px;
+}
