--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ iframe {
     border-radius: 0px;
     margin-top: 20px;
 }
+iframe {
+    width: 900px;
+    height: 596px;
+    border: 0px;
+    border-radius: 0px;
+    margin-top: 20px;
+}
 .border {
     position: absolute;
     top: 0px;
