--- a/css/test.css
+++ b/css/test.css
@@ -7,7 +7,7 @@ embed {
     height: 800px;
     width: 300px;
 }
-id.iframe {
+iframe {
     width: 900px;
     height: 600px; /* Old 596px */
     border: 0px;
@@ -15,7 +15,7 @@ id.iframe {
     margin-top: 20px;
 } 
 @media screen and (min-width: 800px) {
-    id.frame {
+    frame {
       width: 40px;
       height: 40px
     }
