--- a/css/test.css
+++ b/css/test.css
@@ -15,7 +15,7 @@ iframe {
     margin-top: 20px;
 } 
 @media screen and (min-width: 800px) {
-    frame {
+    iframe {
       width: 40px;
       height: 40px
     }
