--- a/css/test.css
+++ b/css/test.css
@@ -14,10 +14,13 @@ iframe {
     border-radius: 0px;
     margin-top: 20px;
 } 
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
     iframe {
-      width: 40px;
-      height: 40px
+        width: 300px;
+        height: 100px; /* Old 596px */
+        border: 0px;
+        border-radius: 0px;
+        margin-top: 20px;
     }
   }
 .border {
