--- a/css/test.css
+++ b/css/test.css
@@ -14,7 +14,7 @@ iframe {
     border-radius: 0px;
     margin-top: 20px;
 } 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 1350px) {
     iframe {
         width: 300px;
         height: 100px; /* Old 596px */
