--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,37 @@ embed {
     height: 800px;
     width: 300px;
 }
-iframe {
+iframe /* Chromebook 3:2 Ratio*/{
     width: 900px;
     height: 600px; /* Old 596px */
     border: 0px;
     border-radius: 0px;
     margin-top: 20px;
-}
+} 
+@media screen and (min-width: 1350px) /* Desktop Computers*/ {
+    iframe {
+        width: 1200px;
+        height: 800px; /* Old 596px */
+        border: 0px;
+        border-radius: 0px;
+        margin-top: 20px;
+    }
+    embed {
+        height: 1150px;
+        width: 400px;
+    }
+    .border {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        background-color: #000;
+        width: 90px;
+        height: 1340px;
+        border: none;
+        padding: 50px;
+        border-radius: 0px;
+    }
+  }
 .border {
     position: absolute;
     top: 0px;
@@ -24,12 +48,4 @@ iframe {
     border: none;
     padding: 50px;
     border-radius: 0px;
-}
-
-#iframe2 {
-    width: 900px;
-    height: 596px; /* Old 596px */
-    border: 0px;
-    border-radius: 0px;
-    padding-top: 200px;
 }
