--- a/css/test.css
+++ b/css/test.css
@@ -14,7 +14,7 @@ iframe /* Chromebook 3:2 Ratio*/{
     border-radius: 0px;
     margin-top: 20px;
 } 
-@media screen and (min-width: 1650px) /* Desktop Computers*/ {
+@media screen and (min-width: 1400px) /* Desktop Computers*/ {
     iframe {
         width: 1200px;
         height: 800px; /* Old 596px */
@@ -49,4 +49,39 @@ iframe /* Chromebook 3:2 Ratio*/{
     padding: 50px;
     border-radius: 0px;
 }
+.dropbtn {
+  background-color: #04AA6D;
+  border-radius: 15px;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
