--- a/css/test.css
+++ b/css/test.css
@@ -50,7 +50,7 @@ iframe /* Chromebook 3:2 Ratio*/{
     border-radius: 0px;
 }
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: #001320;
   color: white;
   padding: 16px;
   font-size: 16px;
