--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,11 @@ iframe /* Chromebook 3:2 Ratio*/{
   display: block;
 }
 
+div.images {
+  max-width: 800px;
+  margin: auto;
+}
+
 .dropdown-content a:hover {background-color: #f1f1f1;}
 .dropdown:hover .dropdown-content {display: block;}
 .dropdown:hover .dropbtn {background-color: #05263b;}
