--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ iframe /* Chromebook 3:2 Ratio*/{
 div.images {
   max-width: 800px;
   margin: auto;
+  text-decoration: none;
 }
 
 .dropdown-content a:hover {background-color: #f1f1f1;}
