--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ iframe /* Chromebook 3:2 Ratio*/{
 }
 
 div.images {
-  max-width: 800px;
+  max-width: 70%;
   margin: auto;
   text-decoration: none;
 }
