--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ iframe /* Chromebook 3:2 Ratio*/{
     border: 0px;
     border-radius: 0px;
     margin-top: 20px;
+    border-bottom-right-radius: 25px;
 } 
 @media screen and (min-width: 1400px) /* Desktop Computers*/ {
     iframe {
@@ -22,6 +23,7 @@ iframe /* Chromebook 3:2 Ratio*/{
         border: 0px;
         border-radius: 0px;
         margin-top: 20px;
+        border-bottom-right-radius: 25px;
     }
     embed {
         height: 1600px;
