--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,10 @@ iframe /* Chromebook 3:2 Ratio*/{
   font-size: 16px;
   border: none;
   cursor: pointer;
-  border-radius: 10px
+  border-radius: 10px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
 .dropdown {
