--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ iframe /* Chromebook 3:2 Ratio*/{
   border: none;
   cursor: pointer;
   border-radius: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .dropdown {
