--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ iframe /* Chromebook 3:2 Ratio*/{
 .dropdown {
   position: relative;
   display: inline-block;
+  margin-top: 15px;
 }
 
 .dropdown-content {
