--- a/css/test2.css
+++ b/css/test2.css
@@ -1,5 +1,5 @@
 .dropbtn {
-    background-color: #3498DB;
+    background-color: #001320;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -8,7 +8,7 @@
   }
   
   .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+    background-color: #05263b;
   }
   
   .dropdown {
