--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ iframe /* Chromebook 3:2 Ratio*/{
     border: 0px;
     border-radius: 0px;
     margin-top: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
 } 
 @media screen and (min-width: 1400px) /* Desktop Computers*/ {
     iframe {
@@ -22,6 +23,7 @@ iframe /* Chromebook 3:2 Ratio*/{
         border: 0px;
         border-radius: 0px;
         margin-top: 20px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
     }
     embed {
         height: 1600px;
