--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ img {
   border: none;
   border-radius: 25px;
   transition: all .2s ease-in-out;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
 }
 
 img:hover {
