--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ embed {
     height: 1550px;
     width: 300px;
     overflow: hidden;
+    overflow-x: hidden;
 }
 iframe /* Chromebook 3:2 Ratio*/{
     width: 900px;
