--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ body {
   cursor: pointer;
   border-radius: 25px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
+  font-family: 'Poppins', sans-serif;
 }
 
 .button1 {
