--- a/css/style.css
+++ b/css/style.css
@@ -135,12 +135,13 @@ img:hover {
   background: #013052;
   color: white;
   font-size: 20px;
-  width: 30%;
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
+  height: 200px;
 }
 body {
   margin: 0;
