--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,6 @@ img:hover {
 }
 
 .newsHeader {
-  padding: 800px;
   text-align: center;
   background: #013052;
   color: white;
@@ -138,6 +137,7 @@ img:hover {
   width: 200px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 500px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
