--- a/css/style.css
+++ b/css/style.css
@@ -134,14 +134,13 @@ img:hover {
   background: #013052;
   color: white;
   font-size: 20px;
-  width: 200px;
+  width: 300px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 500px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
+  margin-top: 200px;
+  border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.356), 0 6px 20px 0 rgba(0, 0, 0, 0.356);
-  height: 200px;
+  height: 300px;
 }
 body {
   margin: 0;
