--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ iframe /* Chromebook 3:2 Ratio*/{
 } 
 @media screen and (min-width: 1400px) /* Desktop Computers*/ {
     iframe {
-        width: 1200px;
-        height: 800px; /* Old 596px */
+        width: 50%;
+        height: 30%; /* Old 596px */
         border: 0px;
         border-radius: 0px;
         margin-top: 20px;
