--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ iframe /* Chromebook 3:2 Ratio*/{
     left: 0px;
     background-color: #000;
     width: 70px;
-    height: 1600px;
+    height: 215vh;
     border: none;
     padding: 50px;
     border-radius: 0px;
